--- a/izvjestaj/izvjestaj.tex
+++ b/izvjestaj/izvjestaj.tex
@@ -109,5 +109,16 @@ numerička disipacija reda $\phi_k$.
     \epsilon(k) = O(\phi_k)
 \end{equation}
 
+\subsection{Numerička disperzija}
+
+\begin{align*}
+    \omega \Delta t &= -\arctan{(a \mu \sin(\phi_k))} \\
+    &\approx -a \mu \sin(\phi_k)
+        + \frac{1}{3} a^3 \mu^3 \sin^3(\phi_k)
+        - \frac{1}{5} a^5 \mu^5 \sin^5(\phi_k) + ... \\
+    &\approx -a \mu \cdot
+        \left( \phi_k - \frac{1}{3!}\phi_k^3 + \frac{1}{5!}\phi_k^5 -...\right)
+        + ...
+\end{align*}
 
 \end{document}
