ispravak relativne pogreske
Signed-off-by: Darko Janekovic <darko.janekovic@fer.hr>

--- a/izvjestaj/izvjestaj.tex
+++ b/izvjestaj/izvjestaj.tex
@@ -112,7 +112,7 @@ Relativna greška faze se onda može izraziti kao
     \frac{arg(\lambda_k) - (- \phi_k a \mu)}{-\phi_k a \mu} =
         \frac{(-\phi_k + \frac{1}{3!}\phi_k^3 - ...) + \phi_k}{-\phi_k} =
         \frac{(-1 + \frac{1}{3!}\phi_k^2 - ...) + 1}{-1} \approx
-        1 - \frac{1}{3!}\phi_k^2
+        -\frac{1}{3!}\phi_k^2
 \end{align*}
 
 Odnosno pokazali smo da je relativna fazna greška reda $O(\phi_k^2)$.
